~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  ~~~~~~~~~~~~~~~~~~~~~~~
Harry Kalogirou         <harkal@rainbow.cs.unipi.gr>    25 Jun 2001- 2 Nov 2001
Riley Williams          <Riley@Williams.Name>           13 Aug 2001-20 Jan 2002
Eduardo Pereira Habkost <ehabkost@conectiva.com.br>      9 Jun 2004-

-------------------------------------------------------------------------------

Wed Jun  9 15:00:14 BRT 2004	Eduardo Pereira Habkost <ehabkost@conectiva.com.br>
	* Don't build scren by default, until it is working
	* Few little changes trying to make screen compile

Thu Jun 20 23:19:30 BST 2002	Riley Williams <Riley@Williams.Name>

	* Added debugging statements to ktcp.c to try to locate the
	  problem that stops it running with current ELKS kernels.

Sun Jan 20 12:20:03 GMT 2002	Riley Williams <Riley@Williams.Name>

	* Simplified Makefile.

Mon Nov  5 20:48:31 GMT 2001	Riley Williams <Riley@Williams.Name>

	* Corrected typo in Makefile comment.

Fri Nov  2 16:06:39 EET 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Rolled back Riley's changes to the ktcp Makefile that caused
	  problems.

Mon Oct 29 15:14:31 GMT 2001	Riley Williams <Riley@Williams.Name>

	* Merged multiple CHANGELOG documents into one, deleting duplicates.
	* Merged multiple TODO documents into one, deleting duplicates.

Sun Oct  7 00:46:33 BST 2001	Riley Williams <Riley@Williams.Name>

	* Added `make clean` options to all Makefiles not currently containing
	  them, also added WORKING global `make all` option.

Sat Oct  6 20:07:05 BST 2001	Riley Williams <Riley@Williams.Name>

	* Actually committed changes listed below !!!!!!!

Wed Sep 19 23:22:38 BST 2001	Riley Williams <Riley@Williams.Name>

	* Added facility to automatically compile all utilities in ELKSnet
	  package my doing `make all` in the base directory.
	* Added v2.0a of screen utility to ELKSnet package, although it still
	  needs tweaking for ELKS at this stage.
