@@ -20,7 +20,7 @@
 
 INCDIR	= `pwd`/../../elks/include
 
-OPTIONS	= -DELKS # -DLOADAV -DSUNLOADAV -DGETTTYENT -DUSEBCOPY
+OPTIONS	= -DELKS -DUSEBCOPY # -DLOADAV -DSUNLOADAV -DGETTTYENT -DUSEBCOPY
 
 CC	= bcc
 CFLAGS	= -ansi -I$(INCDIR) $(OPTIONS)
